# openadapt-crier

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
crier/: __init__.py  __main__.py  bot.py  cli.py  config.py  db.py  dispatcher.py  drafter.py  filters.py  watcher.py
tests/: conftest.py  test_bot.py  test_config.py  test_db.py  test_dispatcher.py  test_drafter.py  test_filters.py  test_watcher.py
